--- a/projects/sample/package.json
+++ b/projects/sample/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -17,7 +18,7 @@
     "@angular/material": "^10.2.4",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
-    "msalb2c-angular": "file:../../dist/msalb2c-angular",
+    "@whiteduck/msalb2c-angular": "0.0.6",
     "zone.js": "^0.11.1"
   }
 }
