--- a/projects/sample/package.json
+++ b/projects/sample/package.json
@@ -18,7 +18,7 @@
     "@angular/material": "^10.2.4",
     "@angular/platform-browser": "~10.1.5",
     "@angular/platform-browser-dynamic": "~10.1.5",
-    "@whiteduck/msalb2c-angular": "0.0.9",
+    "@whiteduck/msalb2c-angular": "^0.1.0",
     "zone.js": "^0.11.1"
   }
 }
